<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_cart"
        android:title="@string/cart_title"
        app:actionLayout="@layout/view_cart_action"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_support"
        android:icon="@drawable/ic_support"
        android:title="@string/support_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_info"
        android:title="@string/about_menu"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>
